syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/msik-404/micro-appoint-companies/internal/companiespb";

package companiespb;

service Api {
    rpc AddService (AddServiceRequest) returns (google.protobuf.Empty) {}
    rpc UpdateService (UpdateServiceRequest) returns (google.protobuf.Empty) {}
    rpc DeleteService (DeleteServiceRequest) returns (google.protobuf.Empty) {}
    rpc FindManyServices (ServicesRequest) returns (ServicesReply) {}
    rpc AddCompany (AddCompanyRequest) returns (google.protobuf.Empty) {}
    rpc UpdateCompany (UpdateCompanyRequest) returns (google.protobuf.Empty) {}
    rpc DeleteCompany (DeleteCompanyRequest) returns (google.protobuf.Empty) {}
    rpc FindOneCompany (CompanyRequest) returns (CompanyReply) {}
    rpc FindManyCompanies (CompaniesRequest) returns (CompaniesReply) {}
}

message Service {
    string id = 1;
    optional string name = 2;
    optional int32 price = 3;
    optional int32 duration = 4; 
    optional string description = 5;
}

message AddServiceRequest {
    string company_id = 1;
    optional string name = 2;
    optional int32 price = 3;
    optional int32 duration = 4; 
    optional string description = 5;
}

message UpdateServiceRequest {
    string id = 1;
    optional string name = 2;
    optional int32 price = 3;
    optional int32 duration = 4; 
    optional string description = 5;
}

message DeleteServiceRequest {
    string id = 1;
}

message ServicesRequest {
    string company_id = 1;
    optional string start_value = 2;
    optional int64 n_per_page = 3;
}

message ServicesReply{
    repeated Service services = 1;
}

message AddCompanyRequest {
    optional string name = 1;
    optional string type = 2;
    optional string localisation = 3;
    optional string short_description = 4;
    optional string long_description = 5;
}

message UpdateCompanyRequest {
    string id = 1;
    optional string name = 2;
    optional string type = 3;
    optional string localisation = 4;
    optional string short_description = 5;
    optional string long_description = 6;
}

message DeleteCompanyRequest {
    string id = 1;
}

message CompanyRequest {
    string id = 1;
}

message CompanyReply {
    optional string name = 1;
    optional string type = 2;
    optional string localisation = 3;
    optional string long_description = 4;
    repeated Service services = 5;
}

message CompaniesRequest {
    optional string start_value = 1;
    optional int64 n_per_page = 2;
}

message CompanyShort {
    string id = 1;
    optional string name = 2;
    optional string type = 3;
    optional string localisation = 4;
    optional string short_description = 5;
}

message CompaniesReply {
    repeated CompanyShort companies = 1;
}
